--- a/index.html
+++ b/index.html
@@ -522,9 +522,9 @@
             </div>
 
             <div class="Team-Item">
-                <img src="assets/images/avatar5.png" alt="Team Member">
-                <h3> Berk UCAR</h3>
-                <p>Frontend Developer</p>
+                <img src="assets/images/avatar0.png" alt="Team Member">
+                <h3> Name Surname</h3>
+                <p>Title</p>
             </div>
 
         </div>
