--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
             <div class="bar"></div>
         </div>
         <div id="menu-links" class="menu-links">
-            <a href="index.html">Anasayfa</a>
-            <a href="#about">Hakkımızda</a>
-            <a href="#servies">Hizmetler</a>
-            <a href="#contacts">İletişim</a>
+            <a href="#" id="Home">Home</a>
+            <a href="#about" id="About">About</a>
+            <a href="#ourTeam" id="Team">Our Team</a>
+            <a href="#contact" id="Contact">Contact</a>
         </div>
 
     </div>
