--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
             <a href="#about" id="About">About</a>
             <a href="#ourTeam" id="Team">Our Team</a>
             <a href="#contact" id="Contact">Contact</a>
+            <a href="#Faq" id="Faq">FAQ</a>
         </div>
 
     </div>
@@ -57,6 +58,8 @@
                 <li><a href="#about" id="About">About</a></li>
                 <li><a href="#ourTeam" id="Team">Our Team</a></li>
                 <li><a href="#contact" id="Contact">Contact</a></li>
+                <li><a href="faq.html" id="Faq">FAQ</a></li>
+
             </ol>
         </Navbar>
         <!-- <a href="#">Blog</a> -->
@@ -74,8 +77,8 @@
     </header>
 
     <section id="Introduction" class="hidden">
-        <h1></h1>
-        <!-- <div class="Intoduction-Img">
+        <!-- <h1></h1>
+        <div class="Intoduction-Img">
             <img src="assets/images/Yatch.png" alt="Charger">
         </div> -->
 
@@ -84,10 +87,7 @@
             <p>SRD Energy Technologies is a leading provider of hydrogen-powered electric vehicle charging stations.
                 <br>
                 At SRD Energy Tech, we are committed to driving the transition towards a sustainable and electrified
-                maritime industry. <br> Our mission is to provide innovative and reliable charging infrastructure
-                solutions
-                that empower boat owners, <br> marinas, and ports to embrace clean energy and reduce their environmental
-                impact.
+                maritime industry. <br>
             </p>
         </div>
 
@@ -275,33 +275,37 @@
     <h1 class="allHeading">Why Charging Stations</h1>
 
     <section id="whyCharging" class="hidden">
+
         <div class="WhyCharging-Item">
             <div class="WhyCharging-Img">
-                <img src="assets/images/fastcharging.png" alt="Problem 1">
+                <img src="assets/images/fast.png" alt="Problem 1">
             </div>
             <div class="WhyCharging-Text">
                 <h3>High-Speed Charging:</h3>
                 <p> DC fast charging at rates of 185 or 250 kW</p>
             </div>
         </div>
+
         <div class="WhyCharging-Item">
             <div class="WhyCharging-Img">
-                <img src="assets/images/reliable.png" alt="Problem 1">
+                <img src="assets/images/reliability.png" alt="Problem 1">
             </div>
             <div class="WhyCharging-Text">
                 <h3>Reliable Power Assurance:</h3>
                 <p> 100% reliable with guaranteed power output</p>
             </div>
         </div>
+
         <div class="WhyCharging-Item">
             <div class="WhyCharging-Img">
-                <img src="assets/images/off-grid.png" alt="Problem 1">
+                <img src="assets/images/grid2.png" alt="Problem 1">
             </div>
             <div class="WhyCharging-Text">
                 <h3>Grid Independence:</h3>
                 <p> No reliance on grid connections or costly upgrades</p>
             </div>
         </div>
+
         <div class="WhyCharging-Item">
             <div class="WhyCharging-Img">
                 <img src="assets/images/eco.png" alt="Problem 1">
@@ -311,15 +315,17 @@
                 <p> CO2-free operation with green hydrogen</p>
             </div>
         </div>
+
         <div class="WhyCharging-Item">
             <div class="WhyCharging-Img">
-                <img src="assets/images/easy.png" alt="Problem 1">
+                <img src="assets/images/easymm.png" alt="Problem 1">
             </div>
             <div class="WhyCharging-Text">
                 <h3>Easy Maintenance</h3>
                 <p> Minimal maintenance requirements</p>
             </div>
         </div>
+
         <div class="WhyCharging-Item">
             <div class="WhyCharging-Img">
                 <img src="assets/images/modularity.png" alt="Problem 1">
@@ -329,15 +335,17 @@
                 <p>Easy to install and expand with a modular design</p>
             </div>
         </div>
+
         <div class="WhyCharging-Item LastItem">
             <div class="WhyCharging-Img">
-                <img src="assets/images/affordable.png" alt="Problem 1">
+                <img src="assets/images/affordable.jpg" alt="Problem 1">
             </div>
             <div class="WhyCharging-Text">
                 <h3>Affordable price</h3>
                 <p>Cost-effective solution for all types of applications</p>
             </div>
         </div>
+
     </section>
 
     <h1 class="allHeading">Our Potential Customer</h1>
