--- a/FAQ.html
+++ b/FAQ.html
@@ -118,6 +118,41 @@
         </div>
     </div>
 
+
+
+    <footer>
+        <div class="footerContainer">
+
+            <div class="footer-Item">
+                <h3>Quick Links</h3>
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+            </div>
+
+            <div class="footer-Item2">
+                <h3>Contact</h3>
+                <p>SRD Energy Technologies
+                    <br> Germany
+                    <br>
+                    +49 157 513 025 41
+                    <br>
+                    <a href="mailto:info@srdenergy.com">info@srdenergy.com</a>
+                </p>
+            </div>
+
+        </div>
+
+        <div class="copyRight">
+            <p>© 2021 SRD Energy Technologies. All Rights Reserved.</p>
+        </div>
+
+        </div>
+    </footer>
+
+
     </div>
 
     <!-- FAQ -->
