--- a/index.html
+++ b/index.html
@@ -114,16 +114,20 @@
         </div>
     </section>
 
-    <h1 class="allHeading hidden">Why Electric Charging for Maritime in Europe? Why Now?</h1>
-    <p id="Paragraph">The European maritime sector is undergoing a significant transformation, <br> driven by
-        stringent environmental
-        regulations and a growing awareness of the need for sustainable practices. <br> Electric propulsion systems
-        offer a
-        cleaner, quieter, and more efficient alternative to traditional fossil fuel-powered <br> vessels. Investing in
-        electric charging infrastructure now positions you as a leader in the industry, <br> attracting eco-conscious
-        boat
-        owners and contributing to a healthier marine environment.
-    </p>
+    <div class="HeadingAndParagraph">
+        <h1 class="allHeading hidden">Why Electric Charging for Maritime in Europe? Why Now?</h1>
+        <p id="Paragraph">The European maritime sector is undergoing a significant transformation, <br> driven by
+            stringent environmental
+            regulations and a growing awareness of the need for sustainable practices. <br> Electric propulsion systems
+            offer a
+            cleaner, quieter, and more efficient alternative to traditional fossil fuel-powered <br> vessels. Investing
+            in
+            electric charging infrastructure now positions you as a leader in the industry, <br> attracting
+            eco-conscious
+            boat
+            owners and contributing to a healthier marine environment.
+        </p>
+    </div>
 
     <section id="why" class="hidden">
 
