--- a/FAQ.html
+++ b/FAQ.html
@@ -20,136 +20,142 @@
 </head>
 
 <body>
+
+
+
     <div class="container">
+
+        <nav>
+            <div class="Logo">
+                <h1>SRD</h1>
+                <h3>Energy Technologies</h3>
+            </div>
+            <Navbar>
+                <ol>
+                    <li><a href="index.html#Home" id="Home">Home</a></li>
+                    <li><a href="index.html#about" id="About">About</a></li>
+                    <li><a href="index.html#ourTeam" id="Team">Our Team</a></li>
+                    <li><a href="index.html#contact" id="Contact">Contact</a></li>
+                    <li><a href="faq.html" id="Faq">FAQ</a></li>
+                </ol>
+            </Navbar>
+            <div class="SocialMedia">
+                <a href="https://www.linkedin.com/company/srd-energy/" target="_blank"><img
+                        src="assets/images/linkedin.png" width="30px" alt="Linkedin"></a>
+                <a href="mailto:demir@srdenergy.tech"><img src="assets/images/mail.png" width="30px" alt="Email"></a>
+            </div>
+        </nav>
+
 
 
         <!-- HamburgerMenu -->
-        <div class="hamburgermenu-container"></div>
-        <div id="menu-icon" class="menu-icon" onclick="toggleMenu()">
-            <div class="bar"></div>
-            <div class="bar"></div>
-            <div class="bar"></div>
+        <div class="hamburgermenu-container">
+            <div id="menu-icon" class="menu-icon" onclick="toggleMenu()">
+                <div class="bar"></div>
+                <div class="bar"></div>
+                <div class="bar"></div>
+            </div>
+            <div id="menu-links" class="menu-links">
+                <a href="index.html#Home" id="Home">Home</a>
+                <a href="index.html#about" id="About">About</a>
+                <a href="index.html#ourTeam" id="Team">Our Team</a>
+                <a href="index.html#contact" id="Contact">Contact</a>
+                <a href="faq.html" id="Faq">FAQ</a>
+            </div>
         </div>
-        <div id="menu-links" class="menu-links">
-            <a href="index.html#Home" id="Home">Home</a>
-            <a href="index.html#about" id="About">About</a>
-            <a href="index.html#ourTeam" id="Team">Our Team</a>
-            <a href="index.html#contact" id="Contact">Contact</a>
-            <a href="faq.html" id="Faq">FAQ</a>
+        <!-- HamburgerMenu -->
+
+
+        <!-- FAQ -->
+
+
+
+        <div class="faq-container mt-5">
+            <h1 class="mb-4">Frequently Asked Questions</h1>
+            <div class="accordion" id="faqAccordion">
+
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="headingOne">
+                        <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                            What is SRD Energy Technologies?
+                        </button>
+                    </h2>
+                    <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
+                        data-bs-parent="#faqAccordion">
+                        <div class="accordion-body">
+                            SRD Energy Technologies is a company focused on innovative energy solutions.
+                        </div>
+                    </div>
+                </div>
+
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="headingTwo">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                            How can I contact SRD Energy Technologies?
+                        </button>
+                    </h2>
+                    <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
+                        data-bs-parent="#faqAccordion">
+                        <div class="accordion-body">
+                            You can contact us via email at <a
+                                href="mailto:demir@srdenergy.tech">demir@srdenergy.tech</a>
+                            or through our LinkedIn page.
+                        </div>
+                    </div>
+                </div>
+
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="headingThree">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                            Where is SRD Energy Technologies located?
+                        </button>
+                    </h2>
+                    <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
+                        data-bs-parent="#faqAccordion">
+                        <div class="accordion-body">
+                            Our headquarters are located in [Your Location].
+                        </div>
+                    </div>
+                </div>
+
+            </div>
         </div>
+
+
+
+        <footer>
+            <div class="footerContainer">
+
+                <div class="footer-Item">
+                    <h3>Quick Links</h3>
+                    <ul>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#about">About</a></li>
+                        <li><a href="#contact">Contact</a></li>
+                    </ul>
+                </div>
+
+                <div class="footer-Item2">
+                    <h3>Contact</h3>
+                    <p>SRD Energy Technologies
+                        <br> Germany
+                        <br>
+                        +49 157 513 025 41
+                        <br>
+                        <a href="mailto:info@srdenergy.com">info@srdenergy.com</a>
+                    </p>
+                </div>
+
+            </div>
+
+            <div class="copyRight">
+                <p>© 2021 SRD Energy Technologies. All Rights Reserved.</p>
+            </div>
+
     </div>
-
-    <!-- HamburgerMenu -->
-
-    <nav>
-        <div class="Logo">
-            <h1>SRD</h1>
-            <h3>Energy Technologies</h3>
-        </div>
-        <Navbar>
-            <ol>
-                <li><a href="index.html#Home" id="Home">Home</a></li>
-                <li><a href="index.html#about" id="About">About</a></li>
-                <li><a href="index.html#ourTeam" id="Team">Our Team</a></li>
-                <li><a href="index.html#contact" id="Contact">Contact</a></li>
-                <li><a href="faq.html" id="Faq">FAQ</a></li>
-            </ol>
-        </Navbar>
-        <div class="SocialMedia">
-            <a href="https://www.linkedin.com/company/srd-energy/" target="_blank"><img src="assets/images/linkedin.png"
-                    width="30px" alt="Linkedin"></a>
-            <a href="mailto:demir@srdenergy.tech"><img src="assets/images/mail.png" width="30px" alt="Email"></a>
-        </div>
-    </nav>
-
-    <!-- FAQ -->
-
-
-    <div class="faq-container mt-5">
-        <h1 class="mb-4">Frequently Asked Questions</h1>
-        <div class="accordion" id="faqAccordion">
-
-            <div class="accordion-item">
-                <h2 class="accordion-header" id="headingOne">
-                    <button class="accordion-button" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                        What is SRD Energy Technologies?
-                    </button>
-                </h2>
-                <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
-                    data-bs-parent="#faqAccordion">
-                    <div class="accordion-body">
-                        SRD Energy Technologies is a company focused on innovative energy solutions.
-                    </div>
-                </div>
-            </div>
-
-            <div class="accordion-item">
-                <h2 class="accordion-header" id="headingTwo">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                        How can I contact SRD Energy Technologies?
-                    </button>
-                </h2>
-                <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
-                    data-bs-parent="#faqAccordion">
-                    <div class="accordion-body">
-                        You can contact us via email at <a href="mailto:demir@srdenergy.tech">demir@srdenergy.tech</a>
-                        or through our LinkedIn page.
-                    </div>
-                </div>
-            </div>
-
-            <div class="accordion-item">
-                <h2 class="accordion-header" id="headingThree">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                        Where is SRD Energy Technologies located?
-                    </button>
-                </h2>
-                <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
-                    data-bs-parent="#faqAccordion">
-                    <div class="accordion-body">
-                        Our headquarters are located in [Your Location].
-                    </div>
-                </div>
-            </div>
-
-        </div>
-    </div>
-
-
-
-    <footer>
-        <div class="footerContainer">
-
-            <div class="footer-Item">
-                <h3>Quick Links</h3>
-                <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#contact">Contact</a></li>
-                </ul>
-            </div>
-
-            <div class="footer-Item2">
-                <h3>Contact</h3>
-                <p>SRD Energy Technologies
-                    <br> Germany
-                    <br>
-                    +49 157 513 025 41
-                    <br>
-                    <a href="mailto:info@srdenergy.com">info@srdenergy.com</a>
-                </p>
-            </div>
-
-        </div>
-
-        <div class="copyRight">
-            <p>© 2021 SRD Energy Technologies. All Rights Reserved.</p>
-        </div>
-
-        </div>
     </footer>
 
 
