--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
 
 <head>
-
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://db.onlinewebfonts.com/c/c4f0e73a2f65ce98daaf73645f6bdfd8?family=Architype+Albers+W00"
@@ -17,11 +16,9 @@
     <link rel="stylesheet" href="assets/css/SRD.css">
     <script src="assets/js/SRD.js" defer></script>
     <link rel="icon" href="assets/images/Favicon.png" type="image/x-icon">
-
 </head>
 
 <body>
-
 
     <!-- HamburgerMenu -->
 
@@ -41,11 +38,7 @@
 
     </div>
 
-
     <!-- HamburgerMenu -->
-
-
-
 
     <nav>
         <div class="Logo">
@@ -58,7 +51,7 @@
                 <li><a href="#about" id="About">About</a></li>
                 <li><a href="#ourTeam" id="Team">Our Team</a></li>
                 <li><a href="#contact" id="Contact">Contact</a></li>
-                <li><a href="faq.html" id="Faq">FAQ</a></li>
+                <li><a href="FAQ.html" id="Faq">FAQ</a></li>
 
             </ol>
         </Navbar>
@@ -204,7 +197,6 @@
             </div>
         </div>
     </section>
-
 
     <section id="hoWeSolve" class="hidden">
         <div class="HowWeSolve-Item">
@@ -356,7 +348,6 @@
 
     <h1 class="allHeading">Our Potential Customer</h1>
 
-
     <section class="carousel-section hidden">
 
 
@@ -387,7 +378,6 @@
         </div>
 
     </section>
-
 
     <section id="sliderCompanySection" class="hidden">
 
@@ -544,8 +534,6 @@
         </div>
 
     </section>
-
-
 
     <section id="milestones" class="Milestones hidden">
         <h1 class="allHeading">SRD Energy Tech: Milestones in Maritime Electrification</h1>
@@ -1138,8 +1126,6 @@
 
         </div>
     </footer>
-
-
 
     <button id="scrollToTop" class="scroll-to-top">↑</button>
 
