--- a/index.html
+++ b/index.html
@@ -238,6 +238,9 @@
     </section>
 
     <h1 class="allHeading">Our Solution</h1>
+    <p>Our charging stations address the key challenges faced by seaports and harbors in adopting electric charging
+        infrastructure:
+    </p>
 
     <section id="ourSolition" class="hidden">
 
@@ -245,26 +248,31 @@
         <div class="Solitions">
 
             <div class="Solitions-Item">
-                <img src="assets/images/grida.png" alt="Image">
+                <img src="assets/images/limited.png" alt="Image">
                 <div class="Solition-Text">
-                    <h3>Consulting</h3>
+                    <h3>Limited Charging Capacity</h3>
                     <p>Embody energy and <br> independence, anywhere, <br> anytime.</p>
                 </div>
             </div>
 
             <div class="Solitions-Item">
-                <img src="assets/images/modular.png" alt="Image">
+                <img src="assets/images/Infrastructure.png" alt="Image">
                 <div class="Solition-Text">
-                    <h3>Consulting</h3>
-                    <p>Enhance your energy <br> infrastructure by utilizing <br> modular design.</p>
+                    <h3>Infrastructure Constraints</h3>
+                    <p>Our modular design allows for easy installation <br> and integration into existing port
+                        infrastructure, <br> minimizing disruption and costs.
+                    </p>
                 </div>
             </div>
 
             <div class="Solition-Item">
-                <img src="assets/images/chargeicon.png" alt="Image">
+                <img src="assets/images/Interoperability.png" alt="Image">
                 <div class="Solition-Text">
-                    <h3>Consulting</h3>
-                    <p>Charge your vehicle in less than 15 minutes</p>
+                    <h3>Interoperability</h3>
+                    <p>Our stations are compatible with a wide range of electric vessels, <br> ensuring seamless
+                        charging experiences for boat owners.
+
+                    </p>
                 </div>
             </div>
         </div>
