--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
         <div class="Solitions">
 
             <div class="Solitions-Item">
-                <img src="assets/images/limited.png" alt="Image">
+                <img src="assets/images/charging.png" alt="Image">
                 <div class="Solition-Text">
                     <h3>Limited Charging Capacity</h3>
                     <p>Embody energy and <br> independence, anywhere, <br> anytime.</p>
