--- a/index.html
+++ b/index.html
@@ -240,7 +240,8 @@
     </section>
 
     <h1 class="allHeading scrollReveal">Our Solution</h1>
-    <p>Our charging stations address the key challenges faced by seaports and harbors in adopting electric charging
+    <p class="scrollReveal">Our charging stations address the key challenges faced by seaports and harbors in adopting
+        electric charging
         infrastructure:
     </p>
 
@@ -1163,7 +1164,9 @@
                 <ul>
                     <li><a href="#">Home</a></li>
                     <li><a href="#about">About</a></li>
-                    <li><a href="#contact">Contact</a></li>
+                    <li><a href="#ourTeam">Contact</a></li>
+                    <li><a href="#contact">Services</a></li>
+                    <li><a href="FAQ.html">Projects</a></li>
                 </ul>
             </div>
 
