--- a/index.html
+++ b/index.html
@@ -88,6 +88,8 @@
 
     </section>
 
+
+
     <section id="about" class="scrollReveal ">
 
         <div class="AboutImg">
@@ -96,15 +98,27 @@
 
         <div class="AboutText">
             <h2>Our Mission</h2>
-          
+
             <p> At SRD Energy Tech, we are committed to driving the transition towards a sustainable and electrified
-                maritime industry. Our mission is to provide innovative and reliable charging infrastructure solutions
+                maritime industry. <br> Our mission is to provide innovative and reliable charging infrastructure
+                solutions
                 that empower boat owners, marinas, and ports to embrace clean energy and reduce their environmental
                 impact.
             </p>
 
             </p>
         </div>
+    </section>
+
+
+    <section class="Revolutionary scrollReveal">
+
+        <h1>Introducing Our Revolutionary Charging Stations</h1>
+        <p>
+            The image you provided showcases our cutting-edge charging stations, designed specifically for electric
+            boats, yachts, and vessels. These stations are equipped with advanced technology to ensure efficient and
+            rapid charging, maximizing uptime and minimizing downtime for your electric marine assets</p>
+
     </section>
 
     <div class="HeadingAndParagraph scrollReveal ">
