--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
     </section>
 
     <section id="problems" class="scrollReveal ">
-        <h1 class="allHeading">Why SRD Energy Tech? </h1>
+        <h1 class="allHeading">Why SRD Energy Technologies ? </h1>
         <div class="Problem">
             <div class="Problem-Item">
                 <img src="assets/images/Charge.png" alt="Problem 1">
@@ -584,7 +584,7 @@
             <div class="Team-Item">
                 <img src="assets/images/avatar3.png" alt="Team Member">
                 <h3>Serdar TEMIZ</h3>
-                <p>Inniovation & Tech</p>
+                <p>Inniovation & Technology</p>
             </div>
 
             <div class="Team-Item">
@@ -610,7 +610,7 @@
     </section>
 
     <section id="milestones" class="Milestones scrollReveal">
-        <h1 class="allHeading">SRD Energy Tech: Milestones in Maritime Electrification</h1>
+        <h1 class="allHeading">SRD Energy Technologies : Milestones in Maritime Electrification</h1>
         <ul>
             <li style="--accent-color:#41516C">
                 <p class="date">2023</p>
