--- a/index.html
+++ b/index.html
@@ -113,6 +113,10 @@
 
     <section class="Revolutionary scrollReveal">
 
+        <div class="RevolutionaryImg">
+            <img src="assets/images/About.png" alt="About Us">
+        </div>
+
         <h1>Introducing Our Revolutionary Charging Stations</h1>
         <p>
             The image you provided showcases our cutting-edge charging stations, designed specifically for electric
@@ -172,6 +176,7 @@
     <section id="problems" class="scrollReveal ">
         <h1 class="allHeading">Why SRD Energy Technologies ? </h1>
         <div class="Problem">
+
             <div class="Problem-Item">
                 <img src="assets/images/Charge.png" alt="Problem 1">
                 <div class="Problem-Text">
@@ -190,6 +195,7 @@
                     </p>
                 </div>
             </div>
+
             <div class="Problem-Item">
                 <img src="assets/images/climate.png" alt="Problem 1">
                 <div class="Problem-Text">
