--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     <section id="about" class="scrollReveal ">
 
         <div class="AboutImg">
-            <img src="assets/images/About.png" alt="About Us">
+            <img src="assets/images/third.png" alt="About Us">
         </div>
 
         <div class="AboutText">
@@ -116,12 +116,14 @@
         <div class="RevolutionaryImg">
             <img src="assets/images/About.png" alt="About Us">
         </div>
+        <div class="RevolutionaryText">
+            <h1>Introducing Our Revolutionary Charging Stations</h1>
+            <p>
+                The image you provided showcases our cutting-edge charging stations, designed specifically for electric
+                boats, yachts, and vessels. These stations are equipped with advanced technology to ensure efficient and
+                rapid charging, maximizing uptime and minimizing downtime for your electric marine assets</p>
+        </div>
 
-        <h1>Introducing Our Revolutionary Charging Stations</h1>
-        <p>
-            The image you provided showcases our cutting-edge charging stations, designed specifically for electric
-            boats, yachts, and vessels. These stations are equipped with advanced technology to ensure efficient and
-            rapid charging, maximizing uptime and minimizing downtime for your electric marine assets</p>
 
     </section>
 
@@ -178,7 +180,7 @@
         <div class="Problem">
 
             <div class="Problem-Item">
-                <img src="assets/images/Charge.png" alt="Problem 1">
+                <img src="assets/images/man.png" alt="Problem 1">
                 <div class="Problem-Text">
                     <h3>Comprehensive Services</h3>
                     <p>We offer a comprehensive range of services, from initial consultation and design to installation,
@@ -197,7 +199,7 @@
             </div>
 
             <div class="Problem-Item">
-                <img src="assets/images/climate.png" alt="Problem 1">
+                <img src="assets/images/co3.png" alt="Problem 1">
                 <div class="Problem-Text">
                     <h3>Net-Zero Commitment</h3>
                     <p> We are committed to providing sustainable solutions that contribute to a net-zero future for the
@@ -207,7 +209,7 @@
                 </div>
             </div>
             <div class="Problem-Item">
-                <img src="assets/images/ChargeDemand.png" alt="Problem 1">
+                <img src="assets/images/man2.png" alt="Problem 1">
                 <div class="Problem-Text">
                     <h3>Customer Focus</h3>
                     <p> Our team of experts is dedicated to understanding your specific needs and providing tailored
