--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     <section id="about" class="scrollReveal ">
 
         <div class="AboutImg">
-            <img src="assets/images/third.png" alt="About Us">
+            <img src="assets/images/boatmain.png" alt="About Us">
         </div>
 
         <div class="AboutText">
@@ -189,7 +189,7 @@
                 </div>
             </div>
             <div class="Problem-Item">
-                <img src="assets/images/Electric.png" alt="Problem 1">
+                <img src="assets/images/third.png" alt="Problem 1">
                 <div class="Problem-Text">
                     <h3>Cutting-Edge Technology</h3>
                     <p>Our charging stations incorporate the latest advancements in charging technology, delivering high
