--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         <div class="AboutText">
             <h2>Our Mission</h2>
 
-            <p> At SRD Energy Tech, we are committed to driving the transition towards a sustainable and electrified
+            <p> At SRD Energy Technologies,  &nbsp  we are committed to driving the transition towards a sustainable and electrified
                 maritime industry. <br> Our mission is to provide innovative and reliable charging infrastructure
                 solutions
                 that empower boat owners, marinas, and ports to embrace clean energy and reduce their environmental
