--- a/index.html
+++ b/index.html
@@ -99,8 +99,10 @@
         <div class="AboutText">
             <h2>Our Mission</h2>
 
-            <p> At SRD Energy Technologies,  &nbsp  we are committed to driving the transition towards a sustainable and electrified
-                maritime industry. <br> Our mission is to provide innovative and reliable charging infrastructure
+            <p> At SRD Energy Technologies, we are committed to driving the transition towards a sustainable and
+                electrified
+                maritime industry. &nbsp <br> <br> Our mission is to provide innovative and reliable charging
+                infrastructure
                 solutions
                 that empower boat owners, marinas, and ports to embrace clean energy and reduce their environmental
                 impact.
