--- a/index.html
+++ b/index.html
@@ -122,7 +122,8 @@
             <h1>Introducing Our Revolutionary Charging Stations</h1>
             <p>
                 The image you provided showcases our cutting-edge charging stations, designed specifically for electric
-                boats, yachts, and vessels. These stations are equipped with advanced technology to ensure efficient and
+                boats, yachts, and vessels. &nbsp <br> &nbsp <br> These stations are equipped with advanced technology
+                to ensure efficient and
                 rapid charging, maximizing uptime and minimizing downtime for your electric marine assets</p>
         </div>
 
@@ -130,12 +131,14 @@
     </section>
 
     <div class="HeadingAndParagraph scrollReveal ">
-        <h1 class="allHeading ">Why Electric Charging for Maritime in Europe? Why Now?</h1>
+        <h1 class="allHeading ">Why Electric Charging for Maritime in Europe? </h1>
         <p id="Paragraph">The European maritime sector is undergoing a significant transformation, <br> driven by
             stringent environmental
-            regulations and a growing awareness of the need for sustainable practices. <br> Electric propulsion systems
+            regulations and a growing awareness of the need for sustainable practices. &nbsp <br> &nbsp <br> Electric
+            propulsion systems
             offer a
-            cleaner, quieter, and more efficient alternative to traditional fossil fuel-powered <br> vessels. Investing
+            cleaner, quieter, and more efficient alternative to traditional fossil fuel-powered vessels. &nbsp <br>
+            &nbsp <br> Investing
             in
             electric charging infrastructure now positions you as a leader in the industry, <br> attracting
             eco-conscious
@@ -147,7 +150,7 @@
     <section id="why" class="scrollReveal ">
 
         <div class="WhyUsItem" id="EuPhoto">
-            <img src="assets/images/eyu.png" alt="">
+            <img src="assets/images/charging.png" alt="">
             <div class="WhyUsText">
                 <h2>Limited Charging Capacity</h2>
                 <p> Our high-power charging stations can accommodate a variety of vessel sizes and charging needs,
@@ -157,7 +160,7 @@
         </div>
 
         <div class="WhyUsItem">
-            <img src="assets/images/bar.png" alt="">
+            <img src="assets/images/Infrastructure.png" alt="">
             <div class="WhyUsText">
                 <h2>Infrastructure Constraints</h2>
                 <p>Our modular design allows for easy installation and integration into existing port infrastructure,
@@ -167,7 +170,7 @@
         </div>
 
         <div class="WhyUsItem">
-            <img src="assets/images/3m.png" alt="">
+            <img src="assets/images/Interoperability.png" alt="">
             <div class="WhyUsText">
                 <h2>Interoperability</h2>
                 <p>Our stations are compatible with a wide range of electric vessels, ensuring seamless charging
@@ -199,6 +202,7 @@
                     </p>
                 </div>
             </div>
+
 
             <div class="Problem-Item">
                 <img src="assets/images/co3.png" alt="Problem 1">
@@ -267,42 +271,6 @@
         electric charging
         infrastructure:
     </p>
-
-    <section id="ourSolition" class="scrollReveal">
-
-        <img src="assets/images/About.png" alt="Image">
-        <div class="Solitions">
-
-            <div class="Solitions-Item">
-                <img src="assets/images/charging.png" alt="Image">
-                <div class="Solition-Text">
-                    <h3>Limited Charging Capacity</h3>
-                    <p>Embody energy and <br> independence, anywhere, <br> anytime.</p>
-                </div>
-            </div>
-
-            <div class="Solitions-Item">
-                <img src="assets/images/Infrastructure.png" alt="Image">
-                <div class="Solition-Text">
-                    <h3>Infrastructure Constraints</h3>
-                    <p>Our modular design allows for easy installation <br> and integration into existing port
-                        infrastructure, <br> minimizing disruption and costs.
-                    </p>
-                </div>
-            </div>
-
-            <div class="Solition-Item">
-                <img src="assets/images/Interoperability.png" alt="Image">
-                <div class="Solition-Text">
-                    <h3>Interoperability</h3>
-                    <p>Our stations are compatible with a wide range of electric vessels, <br> ensuring seamless
-                        charging experiences for boat owners.
-
-                    </p>
-                </div>
-            </div>
-        </div>
-    </section>
 
     <h1 class="allHeading scrollReveal">Why Charging Stations</h1>
 
