--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
         <div class="RevolutionaryText">
             <h1>Introducing Our Revolutionary Charging Stations</h1>
             <p>
-                The image you provided showcases our cutting-edge charging stations, designed specifically for electric
+                Our cutting-edge charging stations, designed specifically for electric
                 boats, yachts, and vessels. &nbsp <br> &nbsp <br> These stations are equipped with advanced technology
                 to ensure efficient and
                 rapid charging, maximizing uptime and minimizing downtime for your electric marine assets</p>
