--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                 Our cutting-edge charging stations, designed specifically for electric
                 boats, yachts, and vessels. &nbsp <br> &nbsp <br> These stations are equipped with advanced technology
                 to ensure efficient and
-                rapid charging, maximizing uptime and minimizing downtime for your electric marine assets</p>
+                rapid charging, maximizing uptime and minimizing downtime for your electric marine assets.</p>
         </div>
 
 
