--- a/index.html
+++ b/index.html
@@ -227,6 +227,9 @@
         </div>
     </section>
 
+
+    <h1>Features of Our Charging Stations</h1>
+
     <section id="hoWeSolve" class="scrollReveal">
         <div class="HowWeSolve-Item">
             <img src="assets/images/fast.png" alt="Problem 1">
@@ -266,7 +269,7 @@
         </div>
     </section>
 
-    <h1 class="allHeading scrollReveal">Our Solution</h1>
+    <!-- <h1 class="allHeading scrollReveal">Our Solution</h1>
     <p class="scrollReveal">Our charging stations address the key challenges faced by seaports and harbors in adopting
         electric charging
         infrastructure:
@@ -346,7 +349,7 @@
             </div>
         </div>
 
-    </section>
+    </section> -->
 
     <h1 class="allHeading scrollReveal">Our Potential Customer</h1>
 
