--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
     <section id="why" class="scrollReveal ">
 
         <div class="WhyUsItem" id="EuPhoto">
-            <img src="assets/images/charging.png" alt="">
+            <img src="assets/images/limited2.png" alt="">
             <div class="WhyUsText">
                 <h2>Limited Charging Capacity</h2>
                 <p> Our high-power charging stations can accommodate a variety of vessel sizes and charging needs,
@@ -232,7 +232,7 @@
 
     <section id="hoWeSolve" class="scrollReveal">
         <div class="HowWeSolve-Item">
-            <img src="assets/images/fast.png" alt="Problem 1">
+            <img src="assets/images/charging.png" alt="Problem 1">
             <div class="HowWeSolvetext">
                 <h2>High-Speed Charging</h2>
                 <p>Our stations deliver rapid charging capabilities, minimizing downtime and maximizing vessel usage.
@@ -240,7 +240,7 @@
             </div>
         </div>
         <div class="HowWeSolve-Item">
-            <img src="assets/images/efficiency.png" alt="Problem 1">
+            <img src="assets/images/efficiency2.png" alt="Problem 1">
             <div class="HowWeSolvetext">
                 <h2>Efficiency </h2>
                 <p> Our advanced technology ensures optimal energy utilization, reducing operating costs and
@@ -249,7 +249,7 @@
             </div>
         </div>
         <div class="HowWeSolve-Item">
-            <img src="assets/images/reliability.png" alt="Problem 1">
+            <img src="assets/images/reliability2.png" alt="Problem 1">
             <div class="HowWeSolvetext">
                 <h2>Reliability</h2>
                 <p> Our stations are built to withstand harsh marine environments and provide reliable performance over
@@ -258,7 +258,7 @@
             </div>
         </div>
         <div class="HowWeSolve-Item">
-            <img src="assets/images/maintenance.png" alt="Problem 1">
+            <img src="assets/images/maintenance2.png" alt="Problem 1">
             <div class="HowWeSolvetext">
                 <h2>Maintenance Efficiency</h2>
                 <p>Our streamlined maintenance procedures and remote monitoring capabilities minimize downtime and
