--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
         </div>
 
         <div class="WhyUsItem">
-            <img src="assets/images/Interoperability.png" alt="">
+            <img src="assets/images/Interoperability2.png" alt="">
             <div class="WhyUsText">
                 <h2>Interoperability</h2>
                 <p>Our stations are compatible with a wide range of electric vessels, ensuring seamless charging
@@ -582,8 +582,8 @@
 
             <div class="Team-Item">
                 <img src="assets/images/avatar0.png" alt="Team Member">
-                <h3> Name Surname</h3>
-                <p>Title</p>
+                <h3>Emine Selin</h3>
+                <p>Software Engineer</p>
             </div>
 
         </div>
