--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
         <div class="WhyUsItem">
             <img src="assets/images/Interoperability2.png" alt="">
             <div class="WhyUsText">
-                <h2>Interoperability</h2>
+                <h2>Interoperability </h2>
                 <p>Our stations are compatible with a wide range of electric vessels, ensuring seamless charging
                     experiences for boat owners.
                 </p>
@@ -367,7 +367,7 @@
 
 
                 <label class="item" for="t-1">
-                    <img src="assets/images/avatar0.png" alt="picture">
+                    <img src="assets/images/yatch1.png" alt="picture">
                     <div class="item-text">
                         <h2>Marinas and Yacht Clubs</h2>
                         <p>Enhance your facilities and attract eco-conscious boat owners.
@@ -376,7 +376,7 @@
                 </label>
 
                 <label class="item" for="t-2">
-                    <img src="assets/images/avatar0.png" alt="picture">
+                    <img src="assets/images/ship.png" alt="picture">
                     <div class="item-text">
                         <h2>Commercial Shipping Companies</h2>
                         <p> Reduce your carbon footprint and improve operational efficiency.
@@ -386,7 +386,7 @@
                 </label>
 
                 <label class="item" for="t-3">
-                    <img src="assets/images/avatar0.png" alt="picture">
+                    <img src="assets/images/agencies.png" alt="picture">
                     <div class="item-text">
                         <h2>Government Agencies</h2>
                         <p>Support sustainable maritime development and meet environmental targets.
@@ -396,7 +396,7 @@
                 </label>
 
                 <label class="item" for="t-4">
-                    <img src="assets/images/avatar0.png" alt="picture">
+                    <img src="assets/images/vessel.png" alt="picture">
                     <div class="item-text">
                         <h2>Private Vessel Owners</h2>
                         <p>Enjoy the benefits of electric boating with our reliable charging infrastructure.
@@ -407,7 +407,7 @@
                 </label>
 
                 <label class="item" for="t-5">
-                    <img src="assets/images/boatpark.jpg" alt="">
+                    <img src="assets/images/boatpark1.jpg" alt="">
                     <div class="item-text">
                         <h2></h2>
                         <p>
