--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
                 <label class="item" for="t-3">
                     <img src="assets/images/agencies.png" alt="picture">
                     <div class="item-text">
-                        <h2>Government Agencies</h2>
+                        <h2>Seaport & Harbours</h2>
                         <p>Support sustainable maritime development and meet environmental targets.
 
                         </p>
@@ -407,10 +407,11 @@
                 </label>
 
                 <label class="item" for="t-5">
-                    <img src="assets/images/boatpark1.jpg" alt="">
+                    <img src="assets/images/boatpark1.png" alt="">
                     <div class="item-text">
-                        <h2></h2>
+                        <h2>Electric Boat Parking</h2>
                         <p>
+                            Inland & Lake Ports:Enable access to DC charging with zero carbon emission
                         </p>
                     </div>
                 </label>
