--- a/index.html
+++ b/index.html
@@ -543,7 +543,8 @@
     <p id="Paragraph" class="scrollReveal">Our team of dedicated professionals brings a wealth of experience in the
         maritime industry, <br>
         electrical
-        engineering, and renewable energy. With a passion for innovation and a commitment to sustainability,<br> we are
+        engineering, and renewable energy. <br> &nbsp <br> With a passion for innovation and a commitment to
+        sustainability,<br> we are
         driving the future of maritime electrification.
     </p>
 
@@ -559,20 +560,20 @@
 
             <div class="Team-Item">
                 <img src="assets/images/avatar2.png" alt="Team Member">
-                <h3>Jane Doe</h3>
-                <p>CTO</p>
+                <h3> Deniz DEMIR</h3>
+                <p>Electrical Engineer</p>
             </div>
 
             <div class="Team-Item">
                 <img src="assets/images/avatar3.png" alt="Team Member">
                 <h3>Serdar TEMIZ</h3>
-                <p>Inniovation & Technology</p>
+                <p>Advisor</p>
             </div>
 
             <div class="Team-Item">
                 <img src="assets/images/avatar4.png" alt="Team Member">
-                <h3>Ömer Faruk GOKCE</h3>
-                <p>HW Engineer</p>
+                <h3>Ömer GOKCE</h3>
+                <p>Hardware Engineer</p>
             </div>
 
             <div class="Team-Item">
