--- a/index.html
+++ b/index.html
@@ -593,7 +593,7 @@
     </section>
 
     <section id="milestones" class="Milestones scrollReveal">
-        <h1 class="allHeading">SRD Energy Technologies : Milestones in Maritime Electrification</h1>
+        <h1 class="allHeading">Our Milestones</h1>
         <ul>
             <li style="--accent-color:#41516C">
                 <p class="date">2023</p>
