--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <li><a href="#about" id="About">About</a></li>
                 <li><a href="#ourTeam" id="Team">Our Team</a></li>
                 <li><a href="#contact" id="Contact">Contact</a></li>
-                <li><a href="FAQ.html" id="Faq">FAQ</a></li>
+                <li><a href="blog.html" id="Blog">Maritime News</a></li>
 
             </ol>
         </Navbar>
@@ -1158,11 +1158,12 @@
             <div class="footer-Item">
                 <h3>Quick Links</h3>
                 <ul>
-                    <li><a href="#">Home</a></li>
                     <li><a href="#about">About</a></li>
-                    <li><a href="#ourTeam">Contact</a></li>
+                    <li><a href="#">Data Privacy</a></li>
                     <li><a href="#contact">Services</a></li>
-                    <li><a href="FAQ.html">Projects</a></li>
+                    <li><a href="#">Impressum</a></li>
+                    <li><a href="#ourTeam">Contact</a></li>
+                    <li><a href="#">Achievements</a></li>
                 </ul>
             </div>
 
@@ -1180,7 +1181,26 @@
         </div>
 
         <div class="copyRight">
-            <p>© 2021 SRD Energy Technologies. All Rights Reserved.</p>
+            <p>© 2024 SRD Energy Technologies. All Rights Reserved.</p>
+        </div>
+        <div class="design">
+
+            <div class="designText">
+                <h5>© 2024 Designed by Berk UCAR.</h5>
+            </div>
+
+            <div class="designSocialMedia">
+                <div class="designLinkedin">
+                    <a href="mailto:uberk.uar@gmail.com"><img src="assets/images/mail.png" alt=""></a>
+                </div>
+
+                <div class="designMail">
+                    <a href=""><img src="assets/images/linkedin.png" alt=""></a>
+                </div>
+
+            </div>
+
+
         </div>
 
         </div>
